--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,9 +75,9 @@ flutter:
   # https://flutter.dev/assets-and-images/#from-packages
 
   # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
+  # in this "flutter" section. Each entry in this message_list should have a
   # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
+  # message_list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
   #   - family: Schyler
